--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -96,7 +96,8 @@
                         <p class="d-inline-block bg-dark text-primary py-1 px-4">Contact Us</p>
                         <h1 class="text-uppercase mb-4">Have Any Query? Please Contact Us!</h1>
                         <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                        <form action="add_disaster_details">
+                        <form action="add_disaster_details" method="POST">
+                            {% csrf_token %}
                             <div class="mb-3">
                                 <label for="name" class="form-label">Disaster</label>
                                 <input type="text" class="form-control" id="name" placeholder="Enter disaster type">
