--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -116,8 +116,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Barber</p>
-                <h1 class="text-uppercase">Meet Our Barber</h1>
+                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Our Entrepreneur</p>
+                <h1 class="text-uppercase">Meet Our Entrepreneur</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -131,8 +131,8 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Rishi Praseeth</h5>
+                            <span class="text-primary">Student</span>
                         </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Thomman Mathew</h5>
+                            <span class="text-primary">Student</span>
                         </div>
                     </div>
                 </div>
@@ -163,8 +163,8 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Mishal Khan</h5>
+                            <span class="text-primary">Student</span>
                         </div>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Aldrin</h5>
+                            <span class="text-primary">Student</span>
                         </div>
                     </div>
                 </div>
