--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -74,7 +74,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src='{% static "img/carousel-1.jpg" %}' alt="Image">
+                    <img class="w-100" src='{% static "https://files.catbox.moe/eu71to.jpg" %}' alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
                             <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Providing Relief in Times of Crisis</h1>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="https://files.catbox.moe/eu71to.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
                             <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Supporting Communities in Need</h1>
