--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -63,7 +63,7 @@
                         <a href="pagenotfound" class="dropdown-item">Error page</a>
                     </div>
                 </div>
-                <a href= "contact.html"  class="nav-item nav-link">Contact</a>
+                <a href= "report"  class="nav-item nav-link">Report</a>
             </div>
             <a href="" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
