--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -67,7 +67,7 @@
                 </div>
                 <a href="report" class="nav-item nav-link active">Report</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="login" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
